feat: Deploy in production (#10)
* feat: create DTOs, service e controllers (#9)

* create DTOs, service e controllers

* create tests and check format

* remove comment test in BastRouteApplicationTests

* Update src/main/java/com/bestroute/api/controller/RouteController.java

* Update src/main/java/com/bestroute/infraestructure/exception/GlobalExceptionHandler.java

* Update src/test/java/com/bestroute/api/controller/RouteControllerTest.java

* add qa branch on convention-check workflow

* feat: add ia requests (#11)

* change ai api for Gemini

* create function for load api json return and save in database

* add new tests

* change version

* fix git-convention-check workflow